# ccf-csp-problems-solutions

./: .gitignore  CMakeLists.txt  new.sh
201909-1/: main.cpp  sample1.in  sample2.in
201909-2/: main.cpp  sample.in  sample2.in
201909-3/: main.cpp  sample1.in  sample2.in  sample3.in  sample4.in  sample5.in  sample6.in  sample7.in  sample8.in
201912-1/: main.cpp
201912-2/: main.cpp
201912-3/: main.cpp  main.min.cpp
201912-4/: main.cpp  notimepoints_version.cpp  priority_queue_version.cpp
CCF-201812-2/: CCF-201812-2.cpp  CCF-201812-2.vcxproj  CCF-201812-2.vcxproj.filters
CCF201312-1/: CCF201312-1.cpp  CCF_Problems.vcxproj  CCF_Problems.vcxproj.filters
CCF201312-2/: CCF201312-2.cpp  CCF201312-2.vcxproj  CCF201312-2.vcxproj.filters
CCF201312-3/: CCF201312-3.cpp  CCF201312-3.vcxproj  CCF201312-3.vcxproj.filters
CCF201312-4/: CCF201312-4.cpp  CCF201312-4.vcxproj  CCF201312-4.vcxproj.filters
CCF201809-1/: 201809-1.cpp  201809-1.vcxproj  201809-1.vcxproj.filters
CCF201809-2/: CCF201809-2.cpp  CCF201809-2.vcxproj  CCF201809-2.vcxproj.filters
CCF201809-3/: CCF201809-3.cpp  CCF201809-3.vcxproj  CCF201809-3.vcxproj.filters  ac1.cpp
CCF201812-1/: CCF201812-1.cpp  CCF201812-1.vcxproj  CCF201812-1.vcxproj.filters
CCF201812-3/: CCF201812-3.cpp  CCF201812-3.vcxproj  CCF201812-3.vcxproj.filters
CCF201812-4/: CCF201812-4.cpp  CCF201812-4.vcxproj  CCF201812-4.vcxproj.filters
template/: main.cpp
util/: debug_ostream.cpp  fake_ostream.cpp  fake_ostream.h  optimize.h  redirect.cpp  redirect.h
