cmake_minimum_required(VERSION 3.13)
project(ccf_csp_problems)

set(CMAKE_CXX_STANDARD 11)

add_compile_definitions(_DEBUG)
include_directories(util)
add_executable(201909-1 201909-1/main.cpp util/redirect.cpp)
add_executable(201909-2 201909-2/main.cpp)
add_executable(201909-3 201909-3/main.cpp)
add_executable(201912-1 201912-1/main.cpp)
add_executable(201912-2 201912-2/main.cpp)
add_executable(201912-3 201912-3/main.cpp)
add_executable(201912-4 201912-4/main.cpp)
add_executable(201912-4_priorQueue 201912-4/priority_queue_version.cpp )
add_executable(201912-5 201912-5/main.cpp 201912-5/bignum.cpp)
add_executable(201803-1 201803-1/main.cpp)
add_executable(201803-2 201803-2/main.cpp)
